--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://slshree1.github.io/React_Portfolio/",
+  "homepage": "https://slshree1.github.io",
   "name": "shreeportfolio",
   "version": "0.1.0",
   "private": true,
